mesa (7.3-2) UNRELEASED; urgency=low

  * Fix watch file to make uscan not consider release candidates as newer than
    actual releases.
  * debian/control: add lpia to the Architecture field for
    libgl1-mesa-dri{,-dbg} to match Ubuntu.

 -- Julien Cristau <jcristau@debian.org>  Sat, 31 Jan 2009 22:06:36 +0100

mesa (7.3-1) experimental; urgency=low

  [ Timo Aaltonen ]
  * New upstream release.

  [ Julien Cristau ]
  * Try to make the diff a bit smaller by removing directories that are in
    upstream git but not in tarballs.

 -- Julien Cristau <jcristau@debian.org>  Fri, 30 Jan 2009 20:00:34 +0100

mesa (7.3~rc3-1) experimental; urgency=low

  [ Timo Aaltonen ]
  * New upstream release candidate.

  [ Julien Cristau ]
  * Refresh patches 03 and 04.

 -- Julien Cristau <jcristau@debian.org>  Wed, 21 Jan 2009 19:01:21 +0100

mesa (7.3~rc1-1) experimental; urgency=low

  * New upstream release candidate.
    + provides DRI2 (closes: #411141).
    + i915: fallback for cube map texture.  Fixes GPU hang with scorched3d
      (closes: #484049).

  [ Timo Aaltonen ]
  * Remove debian/patches/01_disable-intel-classic-warn.diff, the
    warning is gone now.
  * debian/control:
    - Build-depend on x11proto-dri2-dev (>= 1.99.3)

  [ Julien Cristau ]
  * Require libdrm-dev 2.4.3.
  * Merge packaging changes from unstable, from 7.0.3-5 to 7.0.3-7.
  * Delete unused configs/debian-*, and install-source.sh script.  We've
    switched to using autoconf, and mesa-swx11-source is gone.
  * Delete some now unused code from debian/rules.

 -- Julien Cristau <jcristau@debian.org>  Sat, 10 Jan 2009 22:14:55 +0100

mesa (7.2-1) experimental; urgency=low

  [ Brice Goglin ]
  * Fix grammar and punctuation in glxinfo(1), thanks Sam Hocevar,
    closes: #498595.

  [ Timo Aaltonen ]
  * New upstream release.
  * Refresh patch 04_osmesa_version.diff

  [ Julien Cristau ]
  * Remove the build-dep on dri2proto, DRI2 support has been removed.